--- a/www/index.html
+++ b/www/index.html
@@ -208,6 +208,10 @@
             $("#remain").html("残り時間:"+rest);
             analog(rest);
         }
+        if(rest<=0){
+            active=false;
+            alarm();
+        }
     } 
 
   </script>
